--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link rel="stylesheet" href="styles.css">
     <title>Les 3 - Opdracht CSS Grid</title>
 </head>
 <body>
-
+    <div class="content">
+        <p class="a">A</p>
+        <p class="b">B: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi at consequuntur cumque nulla optio tenetur ut! Autem dignissimos est incidunt iusto molestiae porro quas sequi! Debitis, sit, soluta. Architecto blanditiis doloremque dolores ipsa iste iusto laudantium maiores quod tempora! Dignissimos distinctio fugit maiores sapiente tempore. Culpa deserunt praesentium provident quaerat recusandae! Culpa magni numquam quaerat? Commodi delectus ea quas quia quos similique sint tempore voluptate? Deserunt doloremque est et reprehenderit sed. Asperiores cum debitis dolore doloribus, dolorum earum minus nam nihil officiis omnis possimus qui similique ullam vel voluptatum? Commodi corporis eius ex laborum nisi quis sint tempora. Adipisci alias aspernatur corporis cumque deleniti dignissimos, et libero provident qui repellendus, reprehenderit suscipit tenetur veniam vitae voluptas! Accusamus architecto culpa enim illum temporibus. A animi asperiores aspernatur consequuntur corporis delectus, doloremque ducimus eius eveniet explicabo, iure nobis non obcaecati odit optio porro quam quibusdam quod reprehenderit veniam. Corporis dolore itaque ut?</p>
+        <p class="c">C</p>
+        <p class="d">D</p>
+        <p class="e">E</p>
+        <p class="f">F</p>
+    </div>
 </body>
 </html>
